--- a/Lesson 8/nginx/index.html
+++ b/Lesson 8/nginx/index.html
@@ -1,9 +1,21 @@
-<!doctype html>
-<html>
-  <head>
-    <title>HELLO!</title>
+<html><head>
+  <title>Welcome to nginx!</title>
+  <style>
+  html { color-scheme: light dark; }
+  body { width: 35em; margin: 0 auto;
+  font-family: Tahoma, Verdana, Arial, sans-serif; }
+  </style>
   </head>
   <body>
-    <p>Blah, blah. Blah, <strong>BLAH!</strong></p>
-  </body>
-</html>
+  <h1>Welcome to nginx!</h1>
+  <p>This page was modified by Yurii Okereshko</p>
+  
+  <p>For online documentation and support please refer to
+  <a href="http://nginx.org/">nginx.org</a>.<br>
+  Commercial support is available at
+  <a href="http://nginx.com/">nginx.com</a>.</p>
+  
+  <p><em>Thank you for using nginx.</em></p>
+  
+  
+  </body></html>
