--- a/Lesson 8/nginx/index.html
+++ b/Lesson 8/nginx/index.html
@@ -1,21 +1,19 @@
-<html><head>
-  <title>Welcome to nginx!</title>
-  <style>
-  html { color-scheme: light dark; }
-  body { width: 35em; margin: 0 auto;
-  font-family: Tahoma, Verdana, Arial, sans-serif; }
-  </style>
+<!doctype html>
+<html>
+  <head>
   </head>
   <body>
-  <h1>Welcome to nginx!</h1>
-  <p>This page was modified by Yurii Okereshko</p>
-  
-  <p>For online documentation and support please refer to
-  <a href="http://nginx.org/">nginx.org</a>.<br>
-  Commercial support is available at
-  <a href="http://nginx.com/">nginx.com</a>.</p>
-  
-  <p><em>Thank you for using nginx.</em></p>
-  
-  
-  </body></html>
+    <p>Welcome to the nginx page in a docker container !!!</p>
+
+    <p>Current Date and Time is: <span id='date-time'></span></p>
+
+    <script>
+        var dateAndTime = new Date();
+        document.getElementById('date-time').innerHTML=dateAndTime.toLocaleString();
+        </script>
+
+    <p>This Nginx docker container has been created by Nafis Ansari</p>
+    <p>This container image was created at (UTC):</p>
+    
+    </body>
+</html>
